# cppvtbl-rs

./: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
tests/: basic.rs  generics.rs
