[package]
name = "cppvtbl"
version = "0.2.1"
edition = "2021"
description = "C++ ABI ffi compatible vtables"
license = "MIT"

[dependencies]
cppvtbl-macros = { version = "0.2.1", path = "./macros", optional = true }

[workspace]
members = ['macros']

[features]
default = ["macros"]
macros = ["cppvtbl-macros"]
